# dataeyes

./: .gitignore  README.md
model-bench/: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_final_bench.py
model-bench/.codex/agents/: dataeyes-bench-staff-engineer.toml
model-bench/.serena/: project.yml
model-bench/alembic/: env.py
model-bench/alembic/versions/: 0001_initial.py  0002_nullable_schema_valid.py
model-bench/benchmarks/datasets/: benchmark_cases.jsonl  support_tickets.csv
model-bench/benchmarks/rubrics/: llm_judge_rubric.md
model-bench/configs/: .env.example  benchmark.defaults.json  litellm.config.template.yaml
model-bench/docs/: 00_SOURCE_NOTES.md  01_ARCHITECTURE.md  02_ONE_DAY_RUNBOOK.md  03_BENCHMARK_DESIGN.md  04_LANGFUSE_LITELLM.md  05_DATAEYES_INTEGRATION.md  06_DATABASE_AND_STORAGE.md  07_API_SPEC.md  08_IMPLEMENTATION_TASKS.md  09_ACCEPTANCE_CRITERIA.md  10_AGENT_DESIGN_DECISIONS.md  11_RISKS_AND_DEBUGGING.md
model-bench/memory/: MEMORY.md  architecture.md  benchmark_design.md  config_env.md  project_overview.md  status.md
model-bench/prompts/: CLAUDE_CODE_IMPLEMENTATION_PROMPT.md  CODEX_IMPLEMENTATION_PROMPT.md
model-bench/schemas/: benchmark_result.schema.json
model-bench/scripts/: compute_partner_pricing.py  generate_frontier_report.py  generate_frontier_v2_report.py  generate_pdf_report.py  generate_report.py  init-multiple-dbs.sh  restore_frontier_run.py
model-bench/tests/: README.md  test_integration.py  test_json_schema.py  test_scoring.py
(+21 files in other folders)
