[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataeyes-model-bench"
version = "0.1.0"
description = "FastAPI benchmark harness for DataEyes-hosted LLM models with LiteLLM and Langfuse."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "openai>=1.50.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "alembic>=1.13.2",
  "boto3>=1.35.0",
  "jsonschema>=4.23.0",
  "langfuse>=3.0.0",
  "PyYAML>=6.0.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-mock>=3.14.0",
  "respx>=0.21.1",
  "ruff>=0.6.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  "E501",  # line length is owned by `ruff format`; long prompt/string literals stay intact
  "B008",  # FastAPI `Depends(...)` in argument defaults is the idiomatic DI pattern
]
